--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,6 @@ dependencies {
     compile 'com.android.support:cardview-v7:25.+'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.eclipsesource.minimal-json:minimal-json:0.9.+'
+    compile 'com.android.volley:volley:1.0.0'
+
 }
