--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,6 +13,9 @@ android {
     }
     buildTypes {
         release {
+            debug {
+                debuggable true
+            }
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
@@ -33,5 +36,6 @@ dependencies {
     compile 'com.eclipsesource.minimal-json:minimal-json:0.9.+'
     compile 'com.android.volley:volley:1.0.0'
     compile 'com.google.code.gson:gson:2.6.2'
+
 
 }
