--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,6 @@ dependencies {
     compile 'com.eclipsesource.minimal-json:minimal-json:0.9.+'
     compile 'com.android.volley:volley:1.0.0'
     compile 'com.google.code.gson:gson:2.6.2'
-
+    compile 'com.android.support:design:25.+'
 
 }
