--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
         android:icon="@mipmap/ic_launcher"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
+        android:hardwareAccelerated="true"
         android:name="tech.japan.news.messagecardview.controller.AppVolleySingleton">
         <activity android:name="tech.japan.news.messagecardview.activity.MainActivity"
             android:label="@string/app_name"
