--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,10 +7,11 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:hardwareAccelerated="false"
+        android:largeHeap="true"
         android:supportsRtl="true"
+        android:icon="@mipmap/ic_launcher"
         android:theme="@style/AppTheme"
-        android:hardwareAccelerated="true"
         android:name="tech.japan.news.messagecardview.controller.AppVolleySingleton">
         <activity android:name="tech.japan.news.messagecardview.activity.MainActivity"
             android:label="@string/app_name"
